[package]
name = "proxypool"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"
description = "Proxy pool behind a transparent proxy."
license = "MIT"
repository = "https://github.com/spacemeowx2/rust-proxypool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
